--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p class="text-lg">
                         If you decide Netflix isn't for you - no problem. No commitment. Cancel online anytime.
                     </p>
-                    <a href='#' class="btn btn-lg">Watch Free For 30 Days</a>
+                    <a href='#' class="btn btn-lg">Watch Free For 30 Days trial</a>
                 </div>
                 <img src="https://i.ibb.co/J2xDJV7/tab-content-1.png" alt="" />
 
@@ -61,7 +61,7 @@
                 <p class="text-lg">
                     Watch TV shows and movies anytime, anywhere - personalized for you.
                 </p>
-                <a href="#" class="btn btn-lg">Watch Free For 30 Days</a>
+                <a href="#" class="btn btn-lg">Watch Free For 30 Days  trial</a>
             </div>
             <div class="tab-2-content-bottom">
                 <div>
